--- a/src/app/pages/stops-tab/stops-tab.page.html
+++ b/src/app/pages/stops-tab/stops-tab.page.html
@@ -13,48 +13,6 @@
     <h2 class='pageTitle'>Zastávky</h2>
   </ion-text>
 
-  <ion-card
-    *ngFor="let stop of stops"
-    [routerLink]=""
-    class="shadow"
-    button color="white"
-    (click)="openStopDetail($event, '1234')"
-  >
-    <ion-card-content class="ion-no-padding">
-      <ion-grid>
-        <ion-row class="ion-no-padding divider">
-          <ion-col size="2">
-            <div class='lineSquereIconNoBorder'>
-              <ion-icon src="./assets/icon/bus-stop.svg"></ion-icon>
-            </div>
-          </ion-col>
-          <ion-col size="8">
-            <div class="ion-text-nowrap">
-              <h3 class="bold">{{ stop.name }}</h3>
-            </div>
-            <div class="multi-ellipsis">
-              <ion-text color="darkGrey">
-              <p class="destination">
-                Linky</p>
-              </ion-text>
-            </div>
-          </ion-col>
-
-          <ion-col size="2">
-            <div class="favouriteTapDiv">
-              <ion-icon [name]="buttonIcon"
-                        [ngClass]="heartClass"
-                        (click)="saveFavouriteStop($event)"></ion-icon>
-            </div>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col *ngFor="let line of stop.lines" size='2' class="ion-padding">
-            <div class="lineNumberSquare">{{ line }}</div>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-card-content>
-  </ion-card>
+  <stop-card></stop-card>
 
 </ion-content>
