Mentoring https://butterflyeffectsk.slack.com/archives/DNZ72P05N/p1579113060000600

--- a/src/app/components/line-card/line-card.component.html
+++ b/src/app/components/line-card/line-card.component.html
@@ -1,6 +1,7 @@
 <ion-card button
           class="shadow"
-          color="white">
+          color="white"
+          (click)="openLineDetail($event)">
   <ion-card-content class="ion-no-padding">
     <ion-grid>
       <ion-row class="ion-no-padding">
