--- a/src/app/pages/line-detail/line-detail.page.html
+++ b/src/app/pages/line-detail/line-detail.page.html
@@ -67,7 +67,7 @@
                     <div class="favouriteTapDiv favouriteTapDiv2">
                       <ion-icon [name]="buttonIcon"
                                 [ngClass]="heartClass"
-                                (click)="saveFavouriteStop($event)"></ion-icon>
+                                (click)="saveFavouriteStop($event, lineStop.id)"></ion-icon>
                     </div>
                   </ion-col>
                 </ion-row>
