--- a/src/app/pages/lines-tab/lines-tab.page.html
+++ b/src/app/pages/lines-tab/lines-tab.page.html
@@ -15,9 +15,9 @@
   <ion-text>
     <h2 class='pageTitle'>Zoznam liniek</h2>
   </ion-text>
-  <div *ngIf="noData === true" class='noData'>Žiadne dáta</div>
-  <div *ngFor="let line of linesData; let i=index;">
-    <line-card [linesData]="line" (click)="openLineDetail($event, line.id)"></line-card>
+  <div *ngIf="!filterData.length && loaded" class='noData'>Žiadne dáta</div>
+  <div *ngFor="let line of filterData; let i=index;">
+    <line-card [linesData]="line"></line-card>
   </div>
  <!--
       <ion-card button class="shadow" color="white"
