--- a/src/app/components/stop-card/stop-card.component.html
+++ b/src/app/components/stop-card/stop-card.component.html
@@ -12,7 +12,7 @@
         </ion-col>
         <ion-col size="8">
           <div class="ion-text-nowrap">
-            <h3 class="bold">{{ stop.name }}</h3>
+            <h3 class="bold">{{stops.stop_name}}</h3>
           </div>
           <div class="multi-ellipsis">
             <ion-text color="darkGrey">
@@ -31,8 +31,8 @@
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col *ngFor="let line of stop.lines" size='2' class="ion-padding">
-          <div class="lineNumberSquare">{{ line }}</div>
+        <ion-col size='2' class="ion-padding">
+          <div class="lineNumberSquare"></div>
         </ion-col>
       </ion-row>
     </ion-grid>
