--- a/src/app/pages/stops-tab/stops-tab.page.html
+++ b/src/app/pages/stops-tab/stops-tab.page.html
@@ -7,12 +7,16 @@
 
 <ion-content>
 
-  <ion-searchbar class="ion-padding" placeholder="Hľadat"></ion-searchbar>
+  <ion-searchbar class="ion-padding"
+                 placeholder="Hľadat"
+                 (ionInput)="filterStops($event)"></ion-searchbar>
 
   <ion-text>
     <h2 class='pageTitle'>Zastávky</h2>
   </ion-text>
 
-  <stop-card></stop-card>
+<div *ngFor="let stop of filterStopsData">
+  <stop-card [stops]="stop"></stop-card>
+</div>
 
 </ion-content>
