--- a/src/global.scss
+++ b/src/global.scss
@@ -289,7 +289,7 @@ star-rating {
 
 .shadow {
   box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.1) !important;
-  margin-top: -12px;
+  margin-top: 0px;
 }
 
 .horizontal-line {
@@ -402,6 +402,7 @@ ion-avatar img {
 
 ion-header ion-toolbar {
   margin: auto;
+  text-align: center;
 }
 
 @media (min-width: 0px) {
@@ -983,4 +984,10 @@ h4 {
   padding-bottom: 20px;
   text-align: center;
   font-weight: bold;
+}
+
+::ng-deep {
+    .toast-button{
+        color: white;
+    }
 }
