--- a/src/app/pages/line-detail/line-detail.page.html
+++ b/src/app/pages/line-detail/line-detail.page.html
@@ -18,7 +18,7 @@
         </ion-col>
         <ion-col size="8" class=''>
           <div class="ion-text-nowrap">
-            <h4 class="bold">Ostredky, Súhvezdná</h4><br/>
+            <h4 class="bold">{{lineStops.direction}}</h4><br/>
           </div>
           <div class="">
             <ion-text color="darkGrey subHeader">
@@ -37,6 +37,13 @@
       </ion-row>
   </ion-grid>
 
+  <ion-grid style='padding-top: 20px;'>
+    <div *ngFor="let lineStop of lineStops.stops">
+      <line-stop [lineStops]='lineStop'></line-stop>
+    </div>
+  </ion-grid>
+
+<!--
   <ion-grid style='padding-top: 20px;'>
     <ng-template ngFor let-stop [ngForOf]="lineStops">
       <ion-row *ngFor="let lineStop of stop.lineStops; let i=index; let lastItem = last;"
@@ -76,40 +83,7 @@
         </ion-col>
       </ion-row>
     </ng-template>
-<!--
-    <ion-row style='border: 0px solid blue;' class="ion-no-padding lineDetailCard">
-      <ion-col size='2' class='lineTime'>
-        2 <br>
-        min
-      <div class='timeDivider'></div>
-      </ion-col>
-
-      <ion-col size='10' class="ion-no-padding" style='border: 0px solid red;'>
-        <ion-card button color="white"
-                         [routerLink]="" class="ion-no-margin shadow">
-            <ion-card-content class="ion-padding" style='border: 0px solid black;'>
-              <ion-row>
-                <ion-col size='10'>
-                  <div class='bold'>Televízia</div>
-                  <span class='destination'>
-                    zastávka /
-                    <ion-icon src="../assets/icon/naZnamenie.svg"></ion-icon> /
-                    150 m</span>
-                </ion-col>
-
-                <ion-col size='2'>
-                  <div class="favouriteTapDiv favouriteTapDiv2">
-                    <ion-icon [name]="buttonIcon"
-                              [ngClass]="heartClass"
-                              (click)="saveFavouriteStop($event)"></ion-icon>
-                  </div>
-                </ion-col>
-              </ion-row>
-            </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  -->
   </ion-grid>
+-->
 
 </ion-content>
