--- a/src/app/components/line-stop/line-stop.component.html
+++ b/src/app/components/line-stop/line-stop.component.html
@@ -5,31 +5,33 @@
     <ion-row *ngFor="let lineStop of stop.lineStops; let i=index; let lastItem = last;"
               class="ion-no-padding">
   -->
+  <div *ngFor="let i=index; let lastItem = last;"></div>
   <ion-row
           class="ion-no-padding">
     <ion-col size='2' class='lineTime'>
        <br>
       {{lineStops.time}} <br/>min
+
     <div class='timeDivider' *ngIf="!lastItem"></div>
     </ion-col>
-
     <ion-col size='10' class="ion-no-padding">
       <ion-card button color="white"
-                       class="ion-no-margin shadow"
-                       (click)="openLineTimetable($event, idLine)">
+                       (click)="openLineTimetable(
+                                $event, lineStops.id_stop, idLine, idDirection)"
+                       class="ion-no-margin shadow">
           <ion-card-content class="ion-padding">
             <ion-row>
               <ion-col size='10'>
                 <div class='bold'>{{lineStops.stop_name}}</div>
-                <span class='destination'>zastávka /
+                <span class='destination'>zastávka
 
                   <ion-icon src="../assets/icon/naZnamenie.svg"
                             *ngIf="lineStops.request_stop == true">
                   </ion-icon>
 
-                  <span *ngIf="lineStops.request_stop == true"> / </span>
+                  <span *ngIf="lineStops.request_stop === true"> / </span>
 
-                   m</span>
+                  </span>
               </ion-col>
 
               <ion-col size='2'>
