fav page, map page busStops, toast messages fixes, stop-detail page

--- a/src/app/components/leaflet-map/leaflet-map.component.scss
+++ b/src/app/components/leaflet-map/leaflet-map.component.scss
@@ -17,7 +17,7 @@
 
   .countOrange {
     position: absolute;
-    background: #52B200;
+    background: #ff9800;
     display: block;
     font-weight: bold;
     border-radius: 20px;
@@ -26,13 +26,13 @@
     padding-left: 2px;
     padding-right: 2px;
     width: 30px;
-    color: #DBA001;
+    color: white;
     text-align: center;
   }
 
   .countRed {
     position: absolute;
-    background: #52B200;
+    background: #f44336;
     display: block;
     font-weight: bold;
     border-radius: 20px;
