--- a/src/app/pages/favourite-tab/favourite-tab.page.html
+++ b/src/app/pages/favourite-tab/favourite-tab.page.html
@@ -16,16 +16,26 @@
   </ion-row>
 </ion-grid>
 
-<fav-stop-card></fav-stop-card>
-<fav-line-card></fav-line-card>
+<div *ngIf="!noFavsData" #noFavsData>
+  {{favsData}}
+  <fav-stop-card></fav-stop-card>
+  <fav-line-card></fav-line-card>
+</div>
+<div *ngIf="noFavsData" class='noFavData'>
+  Je tu prázdno, pridaj si niečo kliknutím na tlačidlo dole.
+</div>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="backdrop = !backdrop">
     <ion-fab-button>
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top" color='primary'>
-      <ion-fab-button><ion-icon src="./assets/icon/bus-stop.svg"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon src="./assets/icon/timeline.svg"></ion-icon></ion-fab-button>
+      <ion-fab-button (click)="navTo(2)">
+        <ion-icon src="./assets/icon/bus-stop.svg"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button (click)="navTo(1)">
+        <ion-icon src="./assets/icon/timeline.svg"></ion-icon>
+      </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
 
