--- a/src/app/pages/onboarding/onboarding.page.html
+++ b/src/app/pages/onboarding/onboarding.page.html
@@ -1,12 +1,13 @@
 <ion-content color="baTheme">
-  <ion-slides #slides (ionSlideReachEnd)="slideReachedEnd()" [pager]="pagerStatus">
+  <ion-slides #slides (ionSlideReachEnd)="slideReachedEnd()"
+    [pager]="true">
     <!-- FIRST SLIDE -->
     <ion-slide class="step-one">
       <ion-img src="./assets/slides/slide1-favourites.png"></ion-img>
       <ion-grid>
         <ion-row class="ion-align-items-center ion-justify-content-between">
-          <ion-col size="2"></ion-col>
-          <ion-col size-xs="8">
+          <ion-col size="1"></ion-col>
+          <ion-col size-xs="10">
             <h1 text-center>Obľúbené spoje</h1>
           </ion-col>
           <ion-col size-xs="1" class="ion-no-padding">
@@ -92,16 +93,13 @@
               <ion-col size-xs="1"></ion-col>
           </ion-row>
         </ion-grid>
-
-          <ion-button (click)="onboardingDone()" class='buttonStart'>
-            Začať
-          </ion-button>
-
+        <ion-button (click)="onboardingDone()" class='buttonStart'>
+          Začať
+        </ion-button>
     </ion-slide>
   </ion-slides>
   <!-- THIRD SLIDE END -->
-
-    <a [hidden]="!pagerStatus" (click)="onboardingDone()" class="skipLink">
+    <a [hidden]="!pagerStatus2"  (click)="onboardingDone()" class="skipLink">
       PRESKOČIŤ
     </a>
 </ion-content>
