--- a/src/app/pages/timetable/timetable.page.scss
+++ b/src/app/pages/timetable/timetable.page.scss
@@ -9,11 +9,45 @@
 
 .riadok {
 	white-space: nowrap;
+	position: relative;
+
+	&::before {
+		content: "";
+		position: absolute;
+		display: block;
+		width: 100%;
+		height: 30px;
+	}
 }
 
 .min {
 	width: 30px;
-    height: 30px;
-    display: inline-block;
-    text-align: center;
+  height: 30px;
+  text-align: center;
+	display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+	&.closestMin {
+		font-weight: bold;
+	}
+}
+
+.hourColumn {
+	display: flex;
+	justify-content: center;
+
+	&.closest {
+		background-color: grey;
+	}
+}
+
+.riadok {
+	&.closest span {
+		background-color: grey;
+	}
+}
+
+.hoursColumn {
+	border-right: 1px solid;
 }
