--- a/src/app/pages/favourite-tab/favourite-tab.page.html
+++ b/src/app/pages/favourite-tab/favourite-tab.page.html
@@ -10,16 +10,21 @@
 
 <ion-grid class='secondMenuTabs'>
   <ion-row class='tabsContentMenu'>
-    <ion-col size='4'><a href="">Všetko</a></ion-col>
-    <ion-col size='4'><a href="">Linky</a></ion-col>
-    <ion-col size='4'><a href="">Zastávky</a></ion-col>
+    <ion-col size='4'><a href="" (click)="showAll()">Všetko</a></ion-col>
+    <ion-col size='4'><a href="" (click)="showLines()">Linky</a></ion-col>
+    <ion-col size='4'><a href="" (click)="showStops()">Zastávky</a></ion-col>
   </ion-row>
 </ion-grid>
 
 <div *ngIf="!noFavsData" #noFavsData>
-  {{favsData}}
-  <fav-stop-card></fav-stop-card>
-  <fav-line-card></fav-line-card>
+
+  <div *ngIf="showStopsFlag">
+      <fav-stop-card *ngFor="let stopData pre stops" [favStopsData]="stopData"></fav-stop-card>
+  </div>
+
+  <div *ngIf="showLinesFlag">
+    <fav-line-card *ngFor="let lineData of lines" [favLineData]="lineData"></fav-line-card>
+  </div>
 </div>
 <div *ngIf="noFavsData" class='noFavData'>
   Je tu prázdno, pridaj si niečo kliknutím na tlačidlo dole.
