--- a/src/app/components/line-stop/line-stop.component.html
+++ b/src/app/components/line-stop/line-stop.component.html
@@ -9,13 +9,13 @@
   <ion-row
           class="ion-no-padding">
     <ion-col size='2' class='lineTime'>
-       <br>
+
       {{lineStops.time}} <br/>min
 
     <div class='timeDivider' *ngIf="!lastItem"></div>
     </ion-col>
     <ion-col size='10' class="ion-no-padding">
-      <ion-card button color="white"
+      <ion-card color="white" button
                        (click)="openLineTimetable(
                                 $event, lineStops.id_stop, idLine, idDirection)"
                        class="ion-no-margin shadow">
@@ -38,7 +38,8 @@
                 <div class="favouriteTapDiv favouriteTapDiv2">
                   <ion-icon [name]="buttonIcon"
                             [ngClass]="heartClass"
-                            (click)="saveFavouriteStop($event, lineStop.id)"></ion-icon>
+                            (click)="saveFavouriteStop($event, lineStop.id)">
+                  </ion-icon>
                 </div>
               </ion-col>
             </ion-row>
