--- a/src/app/pages/timetable/timetable.page.html
+++ b/src/app/pages/timetable/timetable.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar color='baTheme'>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="
-        /tabs/lines/line-detail/{{idLine}}/{{idDirection}}?direction=1">
+      <ion-back-button
+      defaultHref="/tabs/lines/line-detail/{{idLine}}/{{idDirection}}?direction=1">
       </ion-back-button>
     </ion-buttons>
     <ion-img src="./assets/icon/PNGbratislava.png" class='baIcon'></ion-img>
@@ -39,23 +39,15 @@
       </ion-row>
   </ion-grid>
 
-  <ion-tabs class='' style='padding-top: 100px;'>
-    <ion-tab-bar slot="top" class='timetableTabs'>
-      <ion-tab-button tab="schedule" selected="true">
-        <ion-label style="color: #DF4343;">Prac. dni</ion-label>
-      </ion-tab-button>
+  <ion-grid class='secondMenuTabs'>
+    <ion-row class='tabsContentMenu'>
+      <ion-col size='4'><a class="bold timetableMenu" (click)="showAll()">Prac. dni</a></ion-col>
+      <ion-col size='4'><a class="bold timetableMenu" (click)="showLines()">Prázdniny</a></ion-col>
+      <ion-col size='4'><a class="bold timetableMenu" (click)="showStops()">Voľné dni</a></ion-col>
+    </ion-row>
+  </ion-grid>
 
-      <ion-tab-button tab="speakers">
-        <ion-label>Škol. prazdniny</ion-label>
-      </ion-tab-button>
-
-      <ion-tab-button tab="mapa">
-        <ion-label>Voľné dni</ion-label>
-      </ion-tab-button>
-    </ion-tab-bar>
-  </ion-tabs>
-
-  <ion-card style='margin-top: 60px;' class='ion-no-padding'>
+  <ion-card class='ion-no-padding'>
     <ion-card-content  class='ion-padding'>
       <ion-grid class='ion-no-padding'>
         <!-- header row -->
@@ -87,60 +79,6 @@
             </div>
           </div>
         </ion-row>
-
-        <!-- <ion-row>
-            <ion-col size='2' class='rightDivider'>04</ion-col>
-            <ion-col size='2'>16</ion-col>
-            <ion-col size='2'></ion-col>
-            <ion-col size='2'></ion-col>
-            <ion-col size='2'></ion-col>
-            <ion-col size='2'></ion-col>
-        </ion-row>
-
-        <ion-row>
-            <ion-col size='2' class='rightDivider'>05</ion-col>
-            <ion-col size='2'>15</ion-col>
-            <ion-col size='2'>26</ion-col>
-            <ion-col size='2'>36</ion-col>
-            <ion-col size='2'>46</ion-col>
-            <ion-col size='2'>56</ion-col>
-        </ion-row>
-
-        <ion-row>
-            <ion-col size='2' class='rightDivider'>06</ion-col>
-            <ion-col size='2' class='blueTime'>15</ion-col>
-            <ion-col size='2'>26</ion-col>
-            <ion-col size='2'>36</ion-col>
-            <ion-col size='2'>46</ion-col>
-            <ion-col size='2' class='blueTime'>56</ion-col>
-        </ion-row>
-
-        <ion-row>
-            <ion-col size='2' class='rightDivider'>06</ion-col>
-            <ion-col size='2' class='blueTime'>15</ion-col>
-            <ion-col size='2'>26</ion-col>
-            <ion-col size='2'>36</ion-col>
-            <ion-col size='2'>46</ion-col>
-            <ion-col size='2' class='blueTime'>56</ion-col>
-        </ion-row>
-
-        <ion-row>
-            <ion-col size='2' class='rightDivider'>07</ion-col>
-            <ion-col size='2' class='blueTime'>15</ion-col>
-            <ion-col size='2'>26</ion-col>
-            <ion-col size='2'>36</ion-col>
-            <ion-col size='2'>46</ion-col>
-            <ion-col size='2' class='blueTime'>56</ion-col>
-        </ion-row>
-
-        <ion-row>
-            <ion-col size='2' class='rightDivider'>08</ion-col>
-            <ion-col size='2' class='blueTime'>15</ion-col>
-            <ion-col size='2'>26</ion-col>
-            <ion-col size='2'>36</ion-col>
-            <ion-col size='2'>46v</ion-col>
-            <ion-col size='2'>56</ion-col>
-        </ion-row> -->
       </ion-grid>
     </ion-card-content>
   </ion-card>
