Mentoring - bugfix, minSdkVersion

--- a/src/app/components/line-stop/line-stop.component.html
+++ b/src/app/components/line-stop/line-stop.component.html
@@ -38,7 +38,7 @@
                 <div class="favouriteTapDiv favouriteTapDiv2">
                   <ion-icon [name]="buttonIcon"
                             [ngClass]="heartClass"
-                            (click)="saveFavouriteStop($event, lineStop.id)">
+                            (click)="saveFavouriteStop($event, lineStops.id)">
                   </ion-icon>
                 </div>
               </ion-col>
